chore: update CI workflow to include build step and improve code formatting style: format button disabled states for better readability fix: add newline at end of nuxt.config.ts and tsconfig.json docs: add TODO comment for additional fields in auth.d.ts

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,7 +36,8 @@
   @apply bg-secondary text-center text-lg py-4 px-8 rounded-lg shadow-inner hover:bg-on-background hover:text-background transition duration-300 ease-in-out;
 }
 
-.button:disabled, .button-secondary:disabled {
+.button:disabled,
+.button-secondary:disabled {
   @apply bg-secondary hover:bg-secondary;
 }
 
